[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ryohei Nagasawa <49315610+ryoheinan@users.noreply.github.com>", "Rikuya Aiba <88893181+Rikuya124@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"
djangorestframework = "^3.12.4"
psycopg2-binary = "^2.9.1"
PyJWT = "^2.1.0"
cryptography = "^3.4.8"
django-cors-headers = "^3.8.0"
drf-jwt = "^1.19.1"
requests = "^2.26.0"
python-dotenv = "^0.19.0"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"
django-filter = "^21.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
